--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".SplashScreen"
+            android:name=".BaseActivities.SplashScreen.SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
@@ -49,11 +49,11 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name=".MapsActivity"
+            android:name=".BaseActivities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity"
+            android:name=".BaseActivities.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
